refactor: stream collect대신 toList로 변경
Former-commit-id: e7aa85fd76dd96b03815b58e6d0777d3419b10a4